# quidclaw

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
.quidclaw/workflows/: detect-anomalies.md  financial-memory.md  import-bills.md  monthly-review.md  onboarding.md  organize-documents.md  reconcile.md
docs/: architecture.md  cli-reference.md  contributing.md
docs/plans/: 2026-03-20-cli-migration.md
docs/superpowers/plans/: 2026-03-21-data-sources-and-audit-trail.md  2026-03-22-git-backup.md  2026-03-22-openclaw-integration.md  2026-03-28-phase1-workflows-to-skills.md  2026-03-29-phase2-plugin-framework.md
docs/superpowers/specs/: 2026-03-21-data-sources-and-audit-trail-design.md  2026-03-22-git-backup-design.md  2026-03-22-openclaw-integration-design.md  2026-03-28-plugin-system-and-crypto-design.md
src/quidclaw/: __init__.py  cli.py  config.py
src/quidclaw/core/: accounts.py  anomaly.py  backup.py  balance.py  deps.py  documents.py  inbox.py  init.py  ledger.py  logs.py  notes.py  openclaw.py  plugins.py  prices.py  reports.py  transactions.py
src/quidclaw/core/sources/: agentmail.py  base.py  registry.py
src/quidclaw/skills/quidclaw/: SKILL.md
src/quidclaw/skills/quidclaw-daily/: SKILL.md
src/quidclaw/skills/quidclaw-daily/references/: anomaly-steps.md  import-steps.md
src/quidclaw/skills/quidclaw-import/: SKILL.md
src/quidclaw/skills/quidclaw-import/references/: document-archival.md  email-processing.md
src/quidclaw/skills/quidclaw-onboarding/: SKILL.md
src/quidclaw/skills/quidclaw-onboarding/references/: automation-setup.md  backup-setup.md  email-setup.md
src/quidclaw/skills/quidclaw-review/: SKILL.md
src/quidclaw/skills/quidclaw-review/references/: anomaly-detection.md  reconciliation.md
src/quidclaw/skills/quidclaw/references/: cli-reference.md  (+2 more)
src/quidclaw/templates/: bootstrap.md  heartbeat.md  identity.md  skill.md  soul.md
src/quidclaw/workflows/: check-email.md  daily-routine.md  detect-anomalies.md  import-bills.md  monthly-review.md  onboarding.md  organize-documents.md
tests/: test_cli.py  test_config.py
tests/core/: test_accounts.py  test_agentmail.py  test_anomaly.py  test_backup.py  test_balance.py  test_config.py  test_deps.py  test_documents.py  test_inbox.py  test_ledger.py  test_logs.py  test_notes.py  test_openclaw.py  test_plugins.py  test_prices.py  test_reports.py  test_sources.py  test_transactions.py
tests/e2e/: conftest.py  helpers.py  test_dedup.py  test_import.py  test_insights.py  test_knowledge_base.py  test_onboarding.py  test_organize.py  test_query.py  test_reconcile.py
tests/e2e/fixtures/csv/: alipay-2026-03.csv  bank-statement-2026-02-03.csv  cmb-credit-card-2026-03.csv  multi-currency-2026-03.csv  three-months-2026-q1.csv
tests/e2e/fixtures/text/: insurance-summary.txt  receipt-starbucks.txt
