[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quidclaw"
version = "0.4.0"
description = "Zero-barrier personal CFO — AI-powered, local-first, powered by Beancount"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "GPL-2.0-only"
authors = [
    { name = "Yue Jiang" },
]
keywords = ["finance", "accounting", "beancount", "ai-agent", "personal-cfo", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "beancount>=3.0.0",
    "beanprice>=2.0.0",
    "beanquery>=0.1.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ThorbJ/quidclaw"
Repository = "https://github.com/ThorbJ/quidclaw"
Issues = "https://github.com/ThorbJ/quidclaw/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]
email = [
    "agentmail",
]

[project.scripts]
quidclaw = "quidclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quidclaw"]

[tool.hatch.build.targets.sdist]
include = ["src/quidclaw/**"]

[tool.hatch.build]
include = [
    "src/quidclaw/**/*.py",
    "src/quidclaw/skills/**/SKILL.md",
    "src/quidclaw/skills/**/references/*.md",
    "src/quidclaw/templates/*.md",
]

[tool.pytest.ini_options]
timeout = 30
markers = [
    "e2e: End-to-end tests that run AI CLI (slow, costs API)",
]
addopts = "-m 'not e2e'"
